2002-01-10 Lukas Tinkl <lukas@kde.org>
	* implemented 19 new statistical functions (BETADIST, GAMMADIST, POISSON, etc.)
	
2001-11-25  David Faure  <faure@kde.org>

	* Implemented visual feedback during search & search-replace
	* Search cells using layout order (topleft to bottomright) instead of internal order
	* Allow to search in numerical fields, this shouldn't be disallowed
	* Implemented "from cursor" option
	* Correctly abort if aborting a replacement

2001-10-10  David Faure  <faure@kde.org>

	* Replaced m_bValue, m_bBool, m_bDate, m_bTime, m_bText by a simple enum m_dataType
	  (note that sizeof(KSpreadCell) is still 356! [was 364])
	* The datatype is saved into the XML file, to make loading faster and safer
	* checkValue() is now checkTextInput(), made modular, and not used when loading
	(except for old documents, lacking the datatype)
	* Fixed applying text format
	* Fixed incPrecision (really stupid bug)
	* Saving uses KSpreadLayout::save again. Passes a "bool force" around for copy/paste.
	* Some renamings (formatNumer->formatType, faktor->factor, formular->formula...)
	* isValue() is now isNumeric() for consistency
	* Smaller file when saving (no empty <format> and <cell> tags)
	* Save numbers in a locale-independent way. Didn't manage to find a way to do that
	or bools (while still restoring the cell value to its original text....)
	* setErrorMessage() calls for errors while loading
	* fixed setEnabled in CellLayoutDlg so that I can change precision on a whole row/column
	* added debug hotkey (Ctrl+Shift+V, as in KWord)
	* reversed CHANGES entries and put them into Changelog, so that one can finally
	use XEmacs' ChangeLog facility (C-x 4 a)

2001-04-27-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------
-Now you can copy just text, so you can paste to other application.

2001-04-02-Montel laurent <lmontel@mandrakesoft.com>
----------------------------------------------------